section details add

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400|Open+Sans:200,300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400|Open+Sans:200,300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Travelly</title>
 </head>
@@ -98,6 +98,32 @@
                             Become inspired to travel to Europe. Discover fantastic things to do & places to go.
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="details">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="details__title">Before you leave</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="details__main">Visa & documents</div>
+                    <div class="details__text">There are some things you should take care of before going to your next adventure. We’ll help you to
+                        get required visas and documents needed.</div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="details__main">Accommodation</div>
+                    <div class="details__text">There are some things you should take care of before going to your next adventure. We’ll help you to
+                        get required visas and documents needed.</div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="details__main">Transportation</div>
+                    <div class="details__text">There are some things you should take care of before going to your next adventure. We’ll help you to
+                        get required visas and documents needed.</div>
                 </div>
             </div>
         </div>
