--- a/index.html
+++ b/index.html
@@ -128,6 +128,28 @@
             </div>
         </div>
     </section>
+    <div class="footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer__align">
+                    <div class="col-lg-6">
+                        <div class="footer__rights">
+                            Copyright © 2018 Travelly. All Rights Reserved. Designed for Despreneur.
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="footer__menu">
+                            <div class="footer__menu--item">Home</div>
+                            <div class="footer__menu--item">About</div>
+                            <div class="footer__menu--item">Blog</div>
+                            <div class="footer__menu--item">Press</div>
+                            <div class="footer__menu--item">Contact</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
