ugly centered input-search box

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 h-100 justify-content-center align-items-center">
+                <div class="center">
                     <div class="header__intro">
                         <div class="header__intro--title">
                             Where will you go next?
